--- a/style.css
+++ b/style.css
@@ -1,8 +1,70 @@
 section {
-  width: 1000px;
+  /* width: 1500px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 2px solid rgb(247, 18, 18);
+  margin: 50px auto;
+  padding: 5px;
+}
+
+.btn-pilih {
+  margin-left: 100px;
+}
+
+.wrapcard {
   display: flex;
   justify-content: center;
-  border: 2px solid rgb(247, 18, 18);
-  margin-left: 12%;
-  padding: 5px;
+  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.pict {
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+#poto {
+  width: 80px;
+  height: 78px;
+}
+
+.profile {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.nama {
+  margin-left: 10px;
+}
+
+.nama p:nth-child(1) {
+  margin-top: 20px;
+}
+
+.nama p:nth-child(2) {
+  margin-top: -20px;
+  opacity: 40%;
+  font-size: 14px;
+}
+
+.card-love ul li img {
+  width: 15px;
+  height: 15px;
+}
+
+.card-love ul {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+}
+
+.card-love ul li {
+  display: flex;
+  margin: 3px;
 }
