--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ section {
   justify-content: space-between;
   border: 2px solid rgb(247, 18, 18);
   margin: 50px auto;
-  padding: 5px;
+  padding: 3px;
 }
 
 .btn-pilih {
@@ -53,6 +53,10 @@ section {
   font-size: 14px;
 }
 
+.card-body button {
+  background-color: none;
+}
+
 .card-love ul li img {
   width: 15px;
   height: 15px;
@@ -65,6 +69,9 @@ section {
 }
 
 .card-love ul li {
-  display: flex;
   margin: 3px;
+}
+
+.card-love {
+  border: 2px solid #000;
 }
